# homework_m09

./: main.py  pyproject.toml
hw_m08_01/: config.ini  connect.py  find_quotes.py  models.py  seeds.py
tests/: 01_mytest.py  02_mytest.py  03_mytest.py  04_mytest.py  05_mytest.py  06_mytest.py
